# Helio

./: CONTRACTS.md  Cargo.toml  README.md  SceneDataCorrections.md  build-wasm.ps1  build-wasm.sh  build_errors.txt
crates/examples/: Cargo.toml  churn_benchmark.rs  corona_demo.rs  debug_shapes.rs  editor_demo.rs  editor_demo_mini.rs  indoor_cathedral.rs  indoor_cathedral_fxaa.rs  indoor_cathedral_fxaa_hlfs.rs  indoor_cathedral_hlfs.rs  indoor_cathedral_pp_volumes.rs  indoor_cathedral_water.rs  indoor_corridor.rs  indoor_room.rs  indoor_server_room.rs  light_benchmark.rs  load_fbx.rs  load_fbx_embedded.rs  meshlet_cull_benchmark.rs  oil_rig_night.rs  outdoor_canyon.rs  outdoor_city.rs  outdoor_night.rs  outdoor_rocks.rs  outdoor_volcano.rs  radiant_demo.rs  rapier_collision_groups.rs  rapier_pendulum_bigcloth.rs  rapier_pendulum_cloth.rs  rapier_pendulum_line.rs  rapier_salva.rs  rapier_stack.rs  rc_benchmark.rs  render_v2_basic.rs  render_v2_sky.rs  sdf_demo.rs  shape_battle_royale.rs  simple_graph.rs  space_station.rs  terra_forge_demo.rs  (+5 more)
crates/examples/shaders/: radiant_iridescent.wgsl
crates/examples/voxel/: mesh_demo.rs  raymarch_demo.rs  voxel_world.rs
crates/helio/: Cargo.toml
crates/helio-asset-compat/: Cargo.toml
crates/helio-asset-compat/src/: animation_system.rs  camera_converter.rs  lib.rs  light_converter.rs  material_converter.rs  mesh_converter.rs  scene_converter.rs  texture_loader.rs
crates/helio-bake/: Cargo.toml
crates/helio-bake/src/: bake.rs  cache.rs  config.rs  cpu_lightmap.rs  data.rs  inject.rs  lib.rs
crates/helio-core/: Cargo.toml
crates/helio-core/src/: actor.rs  component.rs  context.rs  entity.rs  error.rs  lib.rs  traits.rs  upload.rs
crates/helio-default-graphs/: Cargo.toml
crates/helio-default-graphs/src/: lib.rs
crates/helio-live-portal/: Cargo.toml
crates/helio-pass-billboard/: Cargo.toml
crates/helio-pass-billboard/shaders/: billboard.wgsl
crates/helio-pass-billboard/src/: lib.rs
crates/helio-pass-billboard/tests/: memory_tests.rs  struct_tests.rs
crates/helio-pass-corona/: Cargo.toml
crates/helio-pass-corona/shaders/: corona.wgsl  corona_render.wgsl
crates/helio-pass-corona/src/: lib.rs
crates/helio-pass-debug-overlay/: Cargo.toml
crates/helio-pass-debug-overlay/shaders/: debug_overlay.wgsl
crates/helio-pass-debug-overlay/src/: lib.rs
crates/helio-pass-gbuffer/: Cargo.toml
crates/helio-pass-gbuffer/shaders/: gbuffer.wgsl
crates/helio-pass-gbuffer/src/: lib.rs
crates/helio-pass-gbuffer/tests/: gbuffer_tests.rs  struct_tests.rs
crates/helio-pass-planetary-voxel/: Cargo.toml
crates/helio-pass-planetary-voxel/src/: config.rs  gpu.rs  lib.rs  residency.wgsl  table.rs
crates/helio-pass-planetary-voxel/tests/: gpu_residency.rs  wgsl_layout.rs
crates/helio-pass-postprocess/: Cargo.toml
crates/helio-pass-postprocess/shaders/: postprocess.wgsl
crates/helio-pass-postprocess/src/: lib.rs
crates/helio-pass-radiance-cascades/: Cargo.toml
crates/helio-pass-radiance-cascades/shaders/: rc_trace.wgsl
crates/helio-pass-radiance-cascades/src/: lib.rs
crates/helio-pass-radiance-cascades/tests/: atlas_tests.rs  cascade_tests.rs
crates/helio-pass-sdf/: Cargo.toml
crates/helio-pass-sdf/shaders/: sdf_scroll.wgsl
crates/helio-pass-sdf/src/: lib.rs  rendering.rs
crates/helio-pass-shadow/: Cargo.toml
crates/helio-pass-shadow/shaders/: depth_clear.wgsl
crates/helio-pass-shadow/src/: lib.rs
crates/helio-pass-shadow/tests/: atlas_tests.rs  shadow_tests.rs
crates/helio-pass-sky/: Cargo.toml
crates/helio-pass-sky/src/: lib.rs
crates/helio-pass-sky/tests/: atmosphere_tests.rs  sky_tests.rs
crates/helio-pass-taa/: Cargo.toml
crates/helio-pass-taa/shaders/: taa.wgsl
crates/helio-pass-taa/src/: lib.rs
crates/helio-pass-taa/tests/: halton_tests.rs  taa_tests.rs
crates/helio-pass-terra-forge/: Cargo.toml
crates/helio-pass-terra-forge/src/: biome.rs  lib.rs  rendering.rs  terrain.rs
crates/helio-pass-virtual-geometry/: Cargo.toml
crates/helio-pass-virtual-geometry/shaders/: vg_cull.wgsl  vg_gbuffer.wgsl
crates/helio-pass-virtual-geometry/src/: lib.rs  rendering.rs
crates/helio-pass-virtual-geometry/tests/: cull_tests.rs  lod_tests.rs
crates/helio-pass-voxel-mesh/: Cargo.toml
crates/helio-pass-voxel-mesh/shaders/: voxel_meshlet.wgsl  voxel_meshlet_frag.wgsl  voxel_meshlet_vert.wgsl  voxel_surface_extract.wgsl
crates/helio-pass-voxel-mesh/src/: lib.rs
crates/helio-pass-voxel-raymarch/: Cargo.toml
crates/helio-pass-voxel-raymarch/shaders/: voxel_raymarch.wgsl  voxel_raymarch_shade.wgsl
crates/helio-pass-voxel-raymarch/src/: lib.rs
crates/helio-planet-voxel-core/: Cargo.toml
crates/helio-planet-voxel-core/src/: cache.rs  contract.rs  gpu.rs  lib.rs  planet_voxel_layout.wgsl  types.rs
crates/helio-planet-voxel-core/tests/: wgsl_layout.rs
crates/helio-v3/: Cargo.toml
crates/helio-v3/src/: context.rs  lib.rs  traits.rs
crates/helio-wasm/: Cargo.toml
crates/helio-wasm/src/: lib.rs  runner.rs
crates/helio-web-demos/: Cargo.toml  build.rs
crates/helio-web-demos/examples-wasm/: debug_shapes.rs  editor_demo.rs  hlfs_benchmark.rs  indoor_cathedral.rs  indoor_corridor.rs  indoor_room.rs  indoor_server_room.rs  light_benchmark.rs  load_fbx.rs  load_fbx_embedded.rs  outdoor_canyon.rs  outdoor_city.rs  outdoor_night.rs  outdoor_rocks.rs  outdoor_volcano.rs  rc_benchmark.rs  render_v2_basic.rs  render_v2_sky.rs  sdf_demo.rs  ship_flight.rs  simple_graph.rs  space_station.rs
crates/helio-web-demos/src/: common.rs  lib.rs
crates/helio-webgpu/: Cargo.toml
crates/helio-webgpu/src/: api.rs  js.rs  lib.rs  types.rs  util.rs
crates/helio/shaders/: debug_draw.wgsl
crates/helio/src/: arena.rs  editor.rs  groups.rs  handles.rs  lib.rs  material.rs  mesh.rs  picking.rs  quark_commands.rs  terrain.rs  vg.rs  wasm_cpp_alloc.rs
crates/libhelio/: Cargo.toml
crates/libhelio/src/: camera.rs  corona.rs  draw.rs  frame.rs  instance.rs  lib.rs  light.rs  material.rs  meshlet.rs  postprocess.rs  shader.rs  shadow.rs  sky.rs
crates_other/helio-snapshot/: Cargo.toml
(+175 files in other folders)
