[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "render_v2_basic"
path = "render_v2_basic.rs"

[[bin]]
name = "render_v2_sky"
path = "render_v2_sky.rs"

[[bin]]
name = "debug_shapes"
path = "debug_shapes.rs"

[[bin]]
name = "indoor_room"
path = "indoor_room.rs"

[[bin]]
name = "indoor_corridor"
path = "indoor_corridor.rs"

[[bin]]
name = "outdoor_night"
path = "outdoor_night.rs"

[[bin]]
name = "outdoor_canyon"
path = "outdoor_canyon.rs"

[[bin]]
name = "indoor_cathedral"
path = "indoor_cathedral.rs"

[[bin]]
name = "indoor_cathedral_fxaa"
path = "indoor_cathedral_fxaa.rs"

[[bin]]
name = "indoor_cathedral_fxaa_hlfs"
path = "indoor_cathedral_fxaa_hlfs.rs"

[[bin]]
name = "indoor_cathedral_hlfs"
path = "indoor_cathedral_hlfs.rs"

[[bin]]
name = "indoor_server_room"
path = "indoor_server_room.rs"

[[bin]]
name = "outdoor_city"
path = "outdoor_city.rs"

[[bin]]
name = "outdoor_volcano"
path = "outdoor_volcano.rs"

[[bin]]
name = "space_station"
path = "space_station.rs"

[[bin]]
name = "churn_benchmark"
path = "churn_benchmark.rs"

[[bin]]
name = "shape_battle_royale"
path = "shape_battle_royale.rs"

[[bin]]
name = "rapier_stack"
path = "rapier_stack.rs"

[[bin]]
name = "rapier_pendulum"
path = "rapier_pendulum.rs"

[[bin]]
name = "rapier_collision_groups"
path = "rapier_collision_groups.rs"

[[bin]]
name = "rapier_pendulum_line"
path = "rapier_pendulum_line.rs"

[[bin]]
name = "rapier_pendulum_cloth"
path = "rapier_pendulum_cloth.rs"

[[bin]]
name = "light_benchmark"
path = "light_benchmark.rs"

[[bin]]
name = "rc_benchmark"
path = "rc_benchmark.rs"

[[bin]]
name = "sdf_demo"
path = "sdf_demo.rs"

[[bin]]
name = "load_fbx"
path = "load_fbx.rs"

[[bin]]
name = "load_fbx_embedded"
path = "load_fbx_embedded.rs"

[[bin]]
name = "simple_graph"
path = "simple_graph.rs"

[[bin]]
name = "outdoor_rocks"
path = "outdoor_rocks.rs"

[[bin]]
name = "rapier_pendulum_bigcloth"
path = "rapier_pendulum_bigcloth.rs"

[[bin]]
name = "rapier_salva"
path = "rapier_salva.rs"

[[bin]]
name = "indoor_cathedral_water"
path = "indoor_cathedral_water.rs"

[[bin]]
name = "oil_rig_night"
path = "oil_rig_night.rs"

[[bin]]
name = "terra_forge_demo"
path = "terra_forge_demo.rs"

[[bin]]
name = "editor_demo"
path = "editor_demo.rs"

[[bin]]
name = "editor_demo_mini"
path = "editor_demo_mini.rs"

[[bin]]
name = "corona_demo"
path = "corona_demo.rs"

[[bin]]
name = "indoor_cathedral_pp_volumes"
path = "indoor_cathedral_pp_volumes.rs"

[[bin]]
name = "vhs_backrooms"
path = "vhs_backrooms.rs"

[[bin]]
name = "voxel_demo"
path = "voxel_demo.rs"


[dependencies]
helio = { workspace = true, features = ["bake"] }
libhelio = { workspace = true }
helio-asset-compat = { workspace = true }
helio-pass-sdf = { workspace = true }
helio-pass-terra-forge = { path = "../helio-pass-terra-forge" }
helio-pass-taa = { workspace = true }
helio-pass-fxaa = { path = "../helio-pass-fxaa" }
helio-pass-corona = { workspace = true }
helio-pass-debug-overlay = { path = "../helio-pass-debug-overlay" }
helio-pass-perf-overlay = { path = "../helio-pass-perf-overlay" }
helio-pass-postprocess = { path = "../helio-pass-postprocess" }
helio-pass-voxel-raymarch = { path = "../helio-pass-voxel-raymarch" }
helio-pass-voxel-mesh = { path = "../helio-pass-voxel-mesh" }
helio-voxel-core = { path = "../helio-voxel-core" }
helio-default-graphs = { path = "../helio-default-graphs" }
rapier3d = "0.24"
rapier_testbed3d = "0.24"
image = { workspace = true, features = ["png"] }
bytemuck = { workspace = true }
glam = { workspace = true }
winit = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, features = ["web", "webgpu", "wgsl"] }
pollster = { workspace = true }
salva3d = { version = "0.9", features = ["dim3", "parry", "rapier"] }
