[package]
name = "helio-asset-compat"
version = "0.1.0"
edition = "2021"
description = "SolidRS integration layer for Helio renderer - asset loading and conversion"

[dependencies]
# Helio renderer facade
helio = { workspace = true }
libhelio = { workspace = true }

# SolidRS - 3D asset loading
solid-rs.workspace = true
solid-gltf.workspace = true
solid-fbx.workspace = true
solid-obj.workspace = true
solid-usd.workspace = true

# Math and utilities
glam.workspace = true
log.workspace = true
thiserror = { workspace = true }

# GPU
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }

# Image decoding
image = { workspace = true, features = ["png", "jpeg"] }
