[package]
name = "helio-bake"
version = "0.1.0"
edition = "2021"
description = "Offline baking for Helio via Nebula (AO, lightmaps, reflection probes, PVS) with on-disk caching"
license = "MIT OR Apache-2.0"

[dependencies]
# Nebula baker — all heavyweight GPU bake passes live here
nebula = { path = "../../vendor/nebula/crates/nebula", default-features = false, features = ["ao", "light", "probe", "visibility"] }

# Helio internal crates
libhelio = { workspace = true }
helio-core = { workspace = true }

# GPU
wgpu.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
glam = { workspace = true }

# Async runtime (blocking wrapper around Nebula's async bake API)
pollster = { workspace = true }

# Serialization for on-disk cache
serde = { workspace = true, features = ["derive"] }
bincode = "1"

# Utilities
log = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Nebula enables UUID v4 generation, which uses getrandom 0.2. Select its
# browser implementation explicitly for wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }
