[package]
name = "helio-live-portal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
quark = { workspace = true, package = "quark" }
