[package]
name = "helio-pass-billboard"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-billboard"
license = "MIT OR Apache-2.0"

[dependencies]
helio-core  = { workspace = true }
libhelio  = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true, features = ["derive"] }
