[package]
name = "helio-pass-planetary-voxel"
version = "0.1.0"
edition = "2021"
description = "Bounded GPU residency and rendering path for Helio planetary voxels"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
helio-planet-voxel-core = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
