[package]
name = "helio-pass-radiance-cascades"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-radiance-cascades"
license = "MIT OR Apache-2.0"

[dependencies]
helio-core  = { workspace = true }
libhelio  = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true, features = ["derive"] }
