[package]
name = "helio-pass-sdf"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: sparse SDF terrain with clip-map LOD, brick atlas, and fullscreen ray march"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { workspace = true }
libhelio  = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true, features = ["derive"] }
glam      = { workspace = true, features = ["bytemuck"] }
log       = { workspace = true }
