[package]
name = "helio-pass-sky"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: helio-pass-sky"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3  = { workspace = true }
libhelio  = { workspace = true }
wgpu      = { workspace = true }
bytemuck  = { workspace = true, features = ["derive"] }
