[package]
name = "helio-pass-terra-forge"
version = "0.1.0"
edition = "2021"
description = "Helio render pass: voxel terrain with flat-grid DDA ray marching"
license = "MIT OR Apache-2.0"

[dependencies]
helio-v3 = { workspace = true }
libhelio  = { workspace = true }
wgpu     = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam     = { workspace = true }
log      = { workspace = true }
