[package]
name = "helio-pass-virtual-geometry"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "GPU-driven virtual geometry pass: per-meshlet frustum + backface-cone culling followed by an indirect GBuffer draw"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
helio-v3 = { workspace = true }
libhelio = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, features = ["web", "webgpu", "wgsl"] }
