[package]
name = "helio-pass-voxel-mesh"
version = "0.1.0"
edition = "2021"
description = "GPU-driven voxel meshlet rendering pass for Helio"

[dependencies]
wgpu = { workspace = true }
helio-core = { workspace = true }
helio-voxel-core = { path = "../helio-voxel-core" }
libhelio = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
log = { workspace = true }
