[package]
name = "helio-pass-voxel-raymarch"
version = "0.1.0"
edition = "2021"
description = "Dynamic-mode DDA ray march pass for Helio voxel volumes"

[dependencies]
wgpu = { workspace = true }
helio-core = { workspace = true }
helio-voxel-core = { path = "../helio-voxel-core" }
libhelio = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
