[package]
name = "helio-v3"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "GPU-driven rendering core with trait-based architecture"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
glam.workspace = true
thiserror = "2.0"
libhelio = { path = "../libhelio" }

[dev-dependencies]
pollster = "0.4"

[features]
default = ["profiling"]
profiling = []
