[package]
name = "helio-v3"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "GPU-driven rendering core with trait-based architecture"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
thiserror = { workspace = true }
libhelio = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[features]
default = ["profiling"]
profiling = []
