[package]
name = "helio-wasm"
version = "0.1.0"
edition = "2021"
description = "Cross-platform WASM wrapper — turns any helio demo into a browser app"

[lib]
crate-type = ["rlib"]

[dependencies]
helio = { workspace = true }
helio-default-graphs = { path = "../helio-default-graphs" }
wgpu = { workspace = true, features = ["webgpu"] }
winit = { workspace = true }
log = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }

# ----- WASM-only deps -------------------------------------------------------
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen          = { workspace = true }
wasm-bindgen-futures  = "0.4"
js-sys                = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Navigator",
    "Performance",
] }
console_log             = "1"
console_error_panic_hook = "0.1"

# ----- native-only deps -----------------------------------------------------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster    = { workspace = true }
env_logger  = { workspace = true }
