[package]
name = "helio-web-demos"
version = "0.1.0"
edition = "2021"
description = "All helio examples compiled to WASM — one feature flag per demo"

# cdylib  = wasm-bindgen output
# rlib     = allows 'cargo check' on the native target for IDE support
[lib]
crate-type = ["cdylib", "rlib"]

# ── one feature per demo ─────────────────────────────────────────────────────
[features]
default = []
render_v2_basic     = []
render_v2_sky       = []
debug_shapes        = []
indoor_room         = []
indoor_corridor     = []
outdoor_night       = []
outdoor_canyon      = []
indoor_cathedral    = []
indoor_server_room  = []
outdoor_city        = []
outdoor_volcano     = []
space_station       = []
light_benchmark     = []
rc_benchmark        = []
sdf_demo            = []
load_fbx            = []
load_fbx_embedded   = []
ship_flight         = []
simple_graph        = []
outdoor_rocks       = []
editor_demo         = []

# ── dependencies ─────────────────────────────────────────────────────────────
[dependencies]
helio-wasm          = { path = "../helio-wasm" }
helio               = { workspace = true }
helio-asset-compat  = { workspace = true }
helio-pass-sdf      = { workspace = true }
wgpu                = { workspace = true }
glam                = { workspace = true, features = ["bytemuck"] }
log                 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
# getrandom requires explicit js/wasm_js feature to work on wasm32-unknown-unknown.
# Both v0.2 and v0.3 may appear in the dep graph (e.g. uuid uses 0.2, newer crates use 0.3).
getrandom    = { version = "0.2", features = ["js"] }
getrandom03  = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
