[package]
name = "helio-web-demos"
version = "0.1.0"
edition = "2021"
description = "Helio browser WebGPU demos"

# cdylib  = wasm-bindgen output
[lib]
crate-type = ["cdylib", "rlib"]

# ── one feature per demo ─────────────────────────────────────────────────────
[features]
default = []
render_v2_basic     = []
render_v2_sky       = []
debug_shapes        = []
indoor_room         = []
indoor_corridor     = []
outdoor_night       = []
outdoor_canyon      = []
indoor_cathedral    = []
indoor_server_room  = []
outdoor_city        = []
outdoor_volcano     = []
space_station       = []
light_benchmark     = []
hlfs_benchmark      = []
sdf_demo            = ["dep:helio-pass-sdf"]
load_fbx            = []
load_fbx_embedded   = ["asset_loading"]
ship_flight         = ["asset_loading"]
simple_graph        = []
outdoor_rocks       = ["asset_loading"]
editor_demo         = []
asset_loading       = ["dep:helio-asset-compat", "dep:getrandom", "dep:getrandom03"]

# ── dependencies ─────────────────────────────────────────────────────────────
[dependencies]
helio-wasm          = { path = "../helio-wasm" }
helio               = { workspace = true }
helio-asset-compat  = { workspace = true, optional = true }
helio-pass-sdf      = { workspace = true, optional = true }
wgpu                = { workspace = true }
glam                = { workspace = true, features = ["bytemuck"] }
log                 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
# getrandom requires explicit js/wasm_js feature to work on wasm32-unknown-unknown.
# Both v0.2 and v0.3 may appear in the dep graph (e.g. uuid uses 0.2, newer crates use 0.3).
getrandom    = { version = "0.2", features = ["js"], optional = true }
getrandom03  = { package = "getrandom", version = "0.3", features = ["wasm_js"], optional = true }
