[package]
name = "helio"
version = "0.18.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "High-level facade over helio-core for stable scene handles and O(1)-style CPU updates"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = "0.7"
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
image = { workspace = true, features = ["png"] }
helio-core = { workspace = true }
helio-pass-postprocess = { workspace = true }

libhelio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
quark.workspace = true
helio-voxel-core = { workspace = true }
helio-bake = { path = "../helio-bake", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
meshopt = "0.6.2"

[features]
default = ["profiling"]
profiling = ["helio-core/profiling"]
bake = ["helio-bake", "uuid"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[target.'cfg(target_os = "windows")'.dependencies]
# Used for DXGI exclusive-fullscreen path (IDXGIFactory1::MakeWindowAssociation).
# Version must match wgpu-hal's transitive dep so types are unified.
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Dxgi"] }
