[package]
name = "libhelio"
version = "0.1.0"
edition = "2021"
authors = ["Helio Contributors"]
description = "Shared GPU types and utilities for the Helio renderer"
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
